[gd_scene load_steps=4 format=3 uid="uid://dpewe7xduxy5l"]

[ext_resource type="Script" path="res://scenes/menu/scripts/menuScript.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3w05"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80c66"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -38.5
offset_right = 36.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="StartButton" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="PackagesButton" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
text = "Packages"

[node name="Settings" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
text = "Settings"

[node name="QuitButton" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
text = "Quit"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 58.0
offset_top = 63.0
offset_right = -54.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m3w05")

[node name="Close" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_80c66")
text = "Close"

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Settings"

[node name="resizeDropdown" type="OptionButton" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -10.0
offset_right = 7.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="fullscreen" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 17.0
offset_right = 18.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "Fullscreen"

[node name="fullScreen" type="CheckButton" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PackagesButton" to="." method="_on_PackagesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Settings/Close" to="." method="_on_close_pressed"]
[connection signal="item_selected" from="Settings/resizeDropdown" to="." method="resizeWindow"]
[connection signal="toggled" from="Settings/fullScreen" to="." method="changeFullscreen"]
